--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,30 +1,22 @@
-pipeline {
+Node {
     agent {
         docker {
             image 'maven:3.5.4-alpine'
             args '-v /root/.m2:/root/.m2'
         }
-    }
-    stages {
-        stage('Build') {
+    stage('Build') {
             steps {
                 sh 'mvn -B -DskipTests clean package'
-            }
-        }
-        stage('Test') {
+            }   
+    }
+    stage('Test') {
             steps {
                 sh 'mvn test'
             }
-            post {
-                always {
-                    junit 'target/surefire-reports/*.xml'
-                }
-            }
-        }
-        stage('Deliver') {
+    }
+    stage('Deploy') {
             steps {
                 sh './jenkins/scripts/deliver.sh'
             }
-        }
     }
 }
