--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,21 +1,23 @@
 agent {
-    docker {
-        image 'maven:3.5.4-alpine'
-        args '-v /root/.m2:/root/.m2'
+    agent {
+        docker {
+            image 'maven:3.5.4-alpine'
+            args '-v /root/.m2:/root/.m2'
+        }
     }
-}
-stage('Build') {
-        steps {
-            sh 'mvn -B -DskipTests clean package'
-        }   
-}
-stage('Test') {
-        steps {
-            sh 'mvn test'
-        }
-}
-stage('Deploy') {
-        steps {
-            sh './jenkins/scripts/deliver.sh'
-        }
+    stage('Build') {
+            steps {
+                sh 'mvn -B -DskipTests clean package'
+            }   
+    }
+    stage('Test') {
+            steps {
+                sh 'mvn test'
+            }
+    }
+    stage('Deploy') {
+            steps {
+                sh './jenkins/scripts/deliver.sh'
+            }
+    }
 }
