--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,6 +1,8 @@
 node('docker') {
-    image 'maven:3.5.4-alpine'
-    args '-v /root/.m2:/root/.m2'
+    docker {
+        image 'maven:3.5.4-alpine'
+        args '-v /root/.m2:/root/.m2'
+    }
     stage('Build') {
             steps {
                 sh 'mvn -B -DskipTests clean package'
