--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,4 +1,6 @@
-node() {
+node {
+    checkout scm
+    docker.image('maven:3.5.4-alpine').withRun('-v /root/.m2:/root/.m2')
     stage('Build') {
             steps {
                 sh 'mvn -B -DskipTests clean package'
