--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,19 +1,13 @@
 node {
-    checkout scm
-    docker.image('maven:3.5.4-alpine').withRun('-v /root/.m2:/root/.m2')
-    stage('Build') {
-            steps {
-                sh 'mvn -B -DskipTests clean package'
-            }   
-    }
-    stage('Test') {
-            steps {
-                sh 'mvn test'
-            }
-    }
-    stage('Deploy') {
-            steps {
-                sh './jenkins/scripts/deliver.sh'
-            }
+    docker.image('maven:3.5.4-alpine').inside('-v /root/.m2:/root/.m2') {
+        stage('Build') {
+            sh 'mvn -B -DskipTests clean package'
+        }
+        stage('Test') {
+            sh 'mvn test'
+        }
+        stage('Deliver') {
+            sh './jenkins/scripts/deliver.sh'
+        }
     }
 }
