--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,5 +1,5 @@
 node {
-    docker.image('maven:3.5.4-alpine').inside('-v $HOME/.m2:/root/.m2') {
+    docker.image('maven:3.5.4-alpine').inside('-v /root/.m2:/root/.m2') {
         stage('Build') {
             sh 'mvn -B -DskipTests clean package'
         }
