--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,4 +1,5 @@
 node {
+    checkout scm
     docker.image('maven:3.5.4-alpine').inside('-v /root/.m2:/root/.m2') {
         stage('Build') {
             sh 'mvn -B -DskipTests clean package'
