--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -12,9 +12,7 @@ node {
             withCredentials([
                     sshUserPrivateKey(credentialsId: 'root', keyFileVariable: 'secret')
                 ]) {
-                    sh "apk update"
-                    sh "apk add rsync"
-                    sh "rsync -avz -e 'ssh -i ${secret} -o StrictHostKeyChecking=no' target/my-app-1.0-SNAPSHOT.jar ubuntu@tkjpedia.com:workspace/dicoding/tmp"
+                    sh "scp -i ${secret} -o StrictHostKeyChecking=no target/my-app-1.0-SNAPSHOT.jar ubuntu@tkjpedia.com:workspace/dicoding/tmp"
                 }
         }
     }
