--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -15,7 +15,10 @@ node {
         withCredentials([
                 sshUserPrivateKey(credentialsId: 'root', keyFileVariable: 'secret')
             ]) {
-                sh "scp -i ${secret} -o StrictHostKeyChecking=no target/my-app-1.0-SNAPSHOT.jar ubuntu@tkjpedia.com:workspace/dicoding/tmp"
+                sh "touch id_rsa"
+                sh "chmod 400 id_rsa"
+                sh "echo ${secret} >> id_rsa"
+                sh "scp -i id_rsa -o StrictHostKeyChecking=no target/my-app-1.0-SNAPSHOT.jar ubuntu@tkjpedia.com:workspace/dicoding/tmp"
             }
     } 
 }
