--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -16,7 +16,7 @@ node {
             withCredentials([
                     sshUserPrivateKey(credentialsId: 'root', keyFileVariable: 'key')
                 ]) {
-                    sh "which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )"
+                    sh "'which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )'"
                     sh "mkdir -p ~/.ssh"
                     sh "eval $(ssh-agent -s)"
                     sh "[[ -f /.dockerenv ]] && echo -e 'Host *\n\tStrictHostKeyChecking no\n\n' > ~/.ssh/config"
