--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -13,15 +13,16 @@ node {
     // }
     docker.image('ubuntu:latest') {
         stage('Deploy') {
-            withCredentials([
-                    sshUserPrivateKey(credentialsId: 'root', keyFileVariable: 'key')
-                ]) {
-                    sh "'which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )'"
-                    sh "mkdir -p ~/.ssh"
-                    sh "[[ -f /.dockerenv ]] && echo -e 'Host *\n\tStrictHostKeyChecking no\n\n' > ~/.ssh/config"
-                    sh "ssh-add <(echo '$key')"
-                    sh "ssh -o StrictHostKeyChecking=no $ubuntu@$key 'ls -al'"
-                }
+            sh "ls -al"
+            // withCredentials([
+            //         sshUserPrivateKey(credentialsId: 'root', keyFileVariable: 'key')
+            //     ]) {
+            //         sh "'which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )'"
+            //         sh "mkdir -p ~/.ssh"
+            //         sh "[[ -f /.dockerenv ]] && echo -e 'Host *\n\tStrictHostKeyChecking no\n\n' > ~/.ssh/config"
+            //         sh "ssh-add <(echo '$key')"
+            //         sh "ssh -o StrictHostKeyChecking=no $ubuntu@$key 'ls -al'"
+            //     }
         } 
     }
 }
