--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -13,7 +13,7 @@ node {
     // }
     docker.image('ubuntu:latest').inside('-e TZ=Asia/Jakarta') {
         stage('Deploy') {
-            sh "'which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )'"
+            sh "which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )"
             withCredentials([
                     sshUserPrivateKey(credentialsId: 'root', keyFileVariable: 'key')
                 ]) {
