--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -11,9 +11,9 @@ node {
     //         sh './jenkins/scripts/deliver.sh'
     //     }
     // }
-    docker.image('ubuntu:latest').inside('-e TZ=Asia/Jakarta') {
+    docker.image('ubuntu:latest').inside('--user=root') {
         stage('Deploy') {
-            sh "which ssh-agent || ( sudo apt-get update -y && sudo apt-get install openssh-client -y )"
+            sh "which ssh-agent || ( apt-get update -y && apt-get install openssh-client -y )"
             withCredentials([
                     sshUserPrivateKey(credentialsId: 'root', keyFileVariable: 'key')
                 ]) {
